--- a/pom.xml
+++ b/pom.xml
@@ -44,7 +44,7 @@
   </developers>
 
   <scm>
-    <connection>scm:git:git://github.com/jenkinsci/datadog-plugin.git</connection>
+    <connection>scm:git:https://github.com/jenkinsci/${project.artifactId}-plugin.git</connection>
     <developerConnection>scm:git:git@github.com:jenkinsci/datadog-plugin.git</developerConnection>
     <url>https://github.com/jenkinsci/datadog-plugin</url>
     <tag>datadog-3.0.0</tag>
