--- a/pom.xml
+++ b/pom.xml
@@ -23,7 +23,6 @@
     <hpi.compatibleSinceVersion>1.0.0</hpi.compatibleSinceVersion>
     <!-- byte-buddy is needed until we bump to java 11: https://stackoverflow.com/questions/69929229/mockito-shipped-within-spring-boot-fails-to-attach-to-jvm-openjdk-11/72912290#72912290 -->
     <byte-buddy.version>1.12.14</byte-buddy.version>
-    <configuration-as-code.version>1625.v27444588cc3d</configuration-as-code.version>
     <useBeta>true</useBeta>
   </properties>
 
@@ -68,7 +67,7 @@
       <dependency>
         <groupId>io.jenkins.tools.bom</groupId>
         <artifactId>bom-2.361.x</artifactId>
-        <version>1750.v0071fa_4c4a_e3</version>
+        <version>2102.v854b_fec19c92</version>
         <scope>import</scope>
         <type>pom</type>
       </dependency>
@@ -82,16 +81,6 @@
       <version>3.1.7-1</version>
     </dependency>
     <dependency>
-      <groupId>io.jenkins.plugins</groupId>
-      <artifactId>commons-text-api</artifactId>
-      <version>1.10.0-36.vc008c8fcda_7b_</version>
-    </dependency>
-    <dependency>
-      <groupId>io.jenkins.plugins</groupId>
-      <artifactId>snakeyaml-api</artifactId>
-      <version>1.33-95.va_b_a_e3e47b_fa_4</version>
-    </dependency>
-    <dependency>
       <groupId>com.datadoghq</groupId>
       <artifactId>java-dogstatsd-client</artifactId>
       <version>2.9.0</version>
@@ -100,13 +89,11 @@
     <dependency>
       <groupId>io.jenkins</groupId>
       <artifactId>configuration-as-code</artifactId>
-      <version>${configuration-as-code.version}</version>
       <scope>test</scope>
     </dependency>
     <dependency>
         <groupId>io.jenkins.configuration-as-code</groupId>
         <artifactId>test-harness</artifactId>
-        <version>${configuration-as-code.version}</version>
         <scope>test</scope>
     </dependency>
     <dependency>
