--- a/pom.xml
+++ b/pom.xml
@@ -188,7 +188,7 @@
     <dependency>
       <groupId>org.jenkins-ci.plugins</groupId>
       <artifactId>jackson2-api</artifactId>
-      <version>2.13.4.20221013-295.v8e29ea_354141</version>
+      <version>2.15.0-334.v317a_165f9b_7c</version>
       <scope>test</scope>
     </dependency>
     <dependency>
